tree-sitter-comp0012/corpus/negative/conditional.txt
================================================================================
Missing consequence
================================================================================

x ?? :: 0

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (ERROR
    (ERROR)
    (number)))

================================================================================
Missing alternative
================================================================================

x ?? 1 ::

--------------------------------------------------------------------------------

(source_file
  (conditional_expression
    condition: (identifier)
    consequence: (number)
    alternative: (MISSING identifier)))

================================================================================
Missing both branches
================================================================================

x ?? ::

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (ERROR))

================================================================================
Wrong separator single colon
================================================================================

x ?? 1 : 0

--------------------------------------------------------------------------------

(ERROR
  (identifier)
  (number)
  (number))

================================================================================
Missing condition operator
================================================================================

x 1 :: 0

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (number)
  (ERROR)
  (number))
