tree-sitter-comp0012/corpus/positive/slicing.txt
==================
Basic slice start:end
==================

arr[1:3]

---

(source_file
  (slice_expression
    object: (identifier)
    start: (number)
    end: (number)))

==================
Slice with start only
==================

arr[1:]

---

(source_file
  (slice_expression
    object: (identifier)
    start: (number)))

==================
Slice with end only
==================

arr[:5]

---

(source_file
  (slice_expression
    object: (identifier)
    end: (number)))

==================
Slice all elements
==================

arr[:]

---

(source_file
  (slice_expression
    object: (identifier)))

==================
Slice with step
==================

arr[0:10:2]

---

(source_file
  (slice_expression
    object: (identifier)
    start: (number)
    end: (number)
    step: (number)))

==================
Slice with step only
==================

arr[::2]

---

(source_file
  (slice_expression
    object: (identifier)
    step: (number)))

==================
Slice start and step
==================

arr[1::2]

---

(source_file
  (slice_expression
    object: (identifier)
    start: (number)
    step: (number)))

==================
Slice end and step
==================

arr[:5:2]

---

(source_file
  (slice_expression
    object: (identifier)
    end: (number)
    step: (number)))

==================
Slice on array literal
==================

#[1, 2, 3, 4, 5][1:3]

---

(source_file
  (slice_expression
    object: (array_literal
      (number)
      (number)
      (number)
      (number)
      (number))
    start: (number)
    end: (number)))

==================
Chained slices
==================

arr[1:5][0:2]

---

(source_file
  (slice_expression
    object: (slice_expression
      object: (identifier)
      start: (number)
      end: (number))
    start: (number)
    end: (number)))
